--- a/redis/数据类型-基础命令.md
+++ b/redis/数据类型-基础命令.md
@@ -7,6 +7,10 @@
 > redis字符串存储字节序列，包括文本，序列化后的对象，和二进制数组。
 > 可见redis 字符串是最基础的redis数据类型。
 > redis字符串经常被用来座位缓存，但是它还支持额外的功能，比如:让你实现计数器，也可以执行位与操作。
+
+## 大小限制
+> `默认`最大是512MB。
+
 ## 使用方式
 
 ***
@@ -248,8 +252,8 @@ redis> GET db
 
 > 为键 `key` 储存的数字值加上增量 `increment` 。
 
-```java
-// 键存在，并且值为数字：
+```shell
+# 键存在，并且值为数字：
 redis> SET rank 50
 OK
 redis> INCRBY rank 20
@@ -257,7 +261,7 @@ redis> INCRBY rank 20
 redis> GET rank
 "70"
   
-// 键不存在：
+# 键不存在：
 redis> EXISTS counter
 (integer) 0
 redis> INCRBY counter 30
@@ -265,7 +269,7 @@ redis> INCRBY counter 30
 redis> GET counter
 "30"
   
-// 键存在，但值无法被解释为数字：
+# 键存在，但值无法被解释为数字：
 redis> SET book "long long ago..."
 OK
 redis> INCRBY book 200
@@ -274,70 +278,280 @@ redis> INCRBY book 200
 
 ***
 ### INCRBYFLOAT
+
+> 为键 `key` 储存的值加上浮点数增量 `increment` 。
+
+无论是键 `key` 的值还是增量 `increment` ， 都可以使用像 `2.0e7` 、 `3e5` 、 `90e-2` 那样的指数符号(exponential notation)来表示， 但是， **执行 INCRBYFLOAT 命令之后的值**总是以同样的形式储存， 也即是， 它们总是由一个数字， 一个（可选的）小数点和一个任意长度的小数部分组成（比如 `3.14` 、 `69.768` ，诸如此类)， 小数部分尾随的 `0` 会被移除， 如果可能的话， 命令还会将浮点数转换为整数（比如 `3.0` 会被保存成 `3` ）。
+
+此外， 无论加法计算所得的浮点数的实际精度有多长， `INCRBYFLOAT` 命令的计算结果最多只保留小数点的后十七位。
+
+当以下任意一个条件发生时， 命令返回一个错误：
+
+- 键 `key` 的值不是字符串类型(因为 Redis 中的数字和浮点数都以字符串的形式保存，所以它们都属于字符串类型）；
+- 键 `key` 当前的值或者给定的增量 `increment` 不能被解释(parse)为双精度浮点数。
+
 ```shell
+redis> GET decimal
+"3.0"
 
-```
+redis> INCRBYFLOAT decimal 2.56
+"5.56"
 
-***
-### LCS
-```shell
-
+redis> GET decimal
+"5.56"
 ```
 
 ***
 ### MGET
-```shell
 
+> 返回给定的一个或多个字符串键的值。
+
+```shell
+redis> SET redis redis.com
+OK
+
+redis> SET mongodb mongodb.org
+OK
+
+redis> MGET redis mongodb
+1) "redis.com"
+2) "mongodb.org"
+
+redis> MGET redis mongodb mysql     # 不存在的 mysql 返回 nil
+1) "redis.com"
+2) "mongodb.org"
+3) (nil)
 ```
 
 ***
 ### MSET
-```shell
 
+> 同时为多个键设置值。
+>
+> 如果某个给定键已经存在， 那么 `MSET` 将使用新值去覆盖旧值， 如果这不是你所希望的效果， 请考虑使用 `MSETNX` 命令， 这个命令只会在所有给定键都不存在的情况下进行设置。
+>
+> `MSET` 是一个原子性(atomic)操作， 所有给定键都会在同一时间内被设置， 不会出现某些键被设置了但是另一些键没有被设置的情况。
+
+```shell
+# 同时对多个键进行设置：
+redis> MSET date "2012.3.30" time "11:00 a.m." weather "sunny"
+OK
+redis> MGET date time weather
+1) "2012.3.30"
+2) "11:00 a.m."
+3) "sunny"
+# 覆盖已有的值：
+redis> MGET k1 k2
+1) "hello"
+2) "world"
+redis> MSET k1 "good" k2 "bye"
+OK
+redis> MGET k1 k2
+1) "good"
+2) "bye"
 ```
 
 ***
 ### MSETNX
-```shell
 
+> 当且仅当所有给定键都不存在时， 为所有给定键设置值。
+>
+> 即使只有一个给定键已经存在， `MSETNX` 命令也会拒绝执行对所有键的设置操作。
+>
+> `MSETNX` 是一个原子性(atomic)操作， 所有给定键要么就全部都被设置， 要么就全部都不设置， 不可能出现第三种状态。
+
+```shell
+# 对不存在的键执行 MSETNX 命令：
+redis> MSETNX rmdbs "MySQL" nosql "MongoDB" key-value-store "redis"
+(integer) 1
+redis> MGET rmdbs nosql key-value-store
+1) "MySQL"
+2) "MongoDB"
+3) "redis"
+
+# 对某个已经存在的键进行设置：
+redis> MSETNX rmdbs "Sqlite" language "python"  # rmdbs 键已经存在，操作失败
+(integer) 0
+redis> EXISTS language                          # 因为 MSETNX 命令没有成功执行
+(integer) 0                                     # 所以 language 键没有被设置
+redis> GET rmdbs                                # rmdbs 键也没有被修改
+"MySQL"
 ```
 
 ***
 ### PSETEX
-```shell
 
+> PSETEX key milliseconds value
+>
+> 这个命令和 `SETEX` 命令相似， 但它以毫秒为单位设置 `key` 的生存时间， 而不是像 `SETEX` 命令那样以秒为单位进行设置。
+
+```shell
+redis> PSETEX mykey 1000 "Hello"
+OK
+
+redis> PTTL mykey
+(integer) 999
+
+redis> GET mykey
+"Hello"
 ```
 
 ***
 ### SETNX
-```shell
 
+>只在键 `key` 不存在的情况下， 将键 `key` 的值设置为 `value` 。
+>
+>若键 `key` 已经存在， 则 `SETNX` 命令不做任何动作。
+>
+>`SETNX` 是『SET if Not eXists』(如果不存在，则 SET)的简写。
+
+```shell
+redis> EXISTS job                # job 不存在
+(integer) 0
+
+redis> SETNX job "programmer"    # job 设置成功
+(integer) 1
+
+redis> SETNX job "code-farmer"   # 尝试覆盖 job ，失败
+(integer) 0
+
+redis> GET job                   # 没有被覆盖
+"programmer"
 ```
 
 ***
 ### SETRANGE
-```shell
 
+> 从偏移量 `offset` 开始， 用 `value` 参数覆写(overwrite)键 `key` 储存的字符串值。
+
+```shell
+# 对非空字符串执行 SETRANGE 命令
+redis> SET greeting "hello world"
+OK
+
+redis> SETRANGE greeting 6 "Redis"
+(integer) 11
+
+redis> GET greeting
+"hello Redis"
+
+# 对空字符串/不存在的键执行 SETRANGE 命令
+redis> EXISTS empty_string
+(integer) 0
+
+redis> SETRANGE empty_string 5 "Redis!"   # 对不存在的 key 使用 SETRANGE
+(integer) 11
+
+redis> GET empty_string                   # 空白处被"\x00"填充
+"\x00\x00\x00\x00\x00Redis!"
 ```
 
 ***
 ### STRLEN
-```shell
 
+> 返回键 `key` 储存的字符串值的长度。
+
+```shell
+# 获取字符串值的长度
+redis> SET mykey "Hello world"
+OK
+
+redis> STRLEN mykey
+(integer) 11
+
+# 不存在的键的长度为 0
+redis> STRLEN nonexisting
+(integer) 0
 ```
 
 ***
-### SUBSTR
-```shell
+### BITOP
 
+**BITOP** operation destkey key [key …]
+
+> 对一个或多个保存二进制位的字符串 `key` 进行位元操作，并将结果保存到 `destkey` 上。
+
+`operation` 可以是 `AND` 、 `OR` 、 `NOT` 、 `XOR` 这四种操作中的任意一种：
+
+- `BITOP AND destkey key [key ...]` ，对一个或多个 `key` 求逻辑并，并将结果保存到 `destkey` 。
+- `BITOP OR destkey key [key ...]` ，对一个或多个 `key` 求逻辑或，并将结果保存到 `destkey` 。
+- `BITOP XOR destkey key [key ...]` ，对一个或多个 `key` 求逻辑异或，并将结果保存到 `destkey` 。
+- `BITOP NOT destkey key` ，对给定 `key` 求逻辑非，并将结果保存到 `destkey` 。
+
+```shell
+redis> SETBIT bits-1 0 1        # bits-1 = 1001
+(integer) 0
+
+redis> SETBIT bits-1 3 1
+(integer) 0
+
+redis> SETBIT bits-2 0 1        # bits-2 = 1011
+(integer) 0
+
+redis> SETBIT bits-2 1 1
+(integer) 0
+
+redis> SETBIT bits-2 3 1
+(integer) 0
+
+redis> BITOP AND and-result bits-1 bits-2
+(integer) 1
+
+redis> GETBIT and-result 0      # and-result = 1001
+(integer) 1
+
+redis> GETBIT and-result 1
+(integer) 0
+
+redis> GETBIT and-result 2
+(integer) 0
+
+redis> GETBIT and-result 3
+(integer) 1
+```
+
+***
+### SETBIT
+
+**SETBIT** key offset value
+
+> 对 `key` 所储存的字符串值，设置或清除指定偏移量上的位(bit)。
+
+```shell
+redis> SETBIT bit 10086 1
+(integer) 0
+
+redis> GETBIT bit 10086
+(integer) 1
+
+redis> GETBIT bit 100   # bit 默认被初始化为 0
+(integer) 0
+```
+***
+### BITPOS
+
+**BITPOS** key bit [start] [end]
+
+> 返回位图中第一个值为 `bit` 的二进制位的位置。
+
+```shell
+127.0.0.1:6379> SETBIT bits 3 1    # 1000
+(integer) 0
+
+127.0.0.1:6379> BITPOS bits 0
+(integer) 0
+
+127.0.0.1:6379> BITPOS bits 1
+(integer) 3
 ```
 
 
-## 大小限制
-> `默认`最大是512MB。
-
 
 # Lists
+
+## 
+
+### 使用方式
 
 # Sets
 
